--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,7 +11,7 @@
 --------------------------------------------------------------*/
 
 body {
-    font-family: "Open Sans", sans-serif;
+    font-family: "Raleway", sans-serif;
     color: #444444;
 }
 
@@ -30,7 +30,7 @@ h3,
 h4,
 h5,
 h6 {
-    font-family: "Roboto", sans-serif;
+    font-family: "Raleway", sans-serif;
 }
 
 
@@ -197,7 +197,7 @@ h6 {
     line-height: 1;
     font-weight: 600;
     letter-spacing: 0.8px;
-    font-family: "Poppins", sans-serif;
+    font-family: "Raleway", sans-serif;
 }
 
 #header .logo a {
@@ -254,7 +254,7 @@ h6 {
     font-size: 15px;
     font-weight: 600;
     padding: 0 3px;
-    font-family: "Open Sans", sans-serif;
+    font-family: "Raleway", sans-serif;
 }
 
 .nav-menu>ul>li>a:before {
@@ -513,7 +513,7 @@ h6 {
     font-weight: 700;
     line-height: 56px;
     color: #222222;
-    font-family: "Poppins", sans-serif;
+    font-family: "Raleway", sans-serif;
 }
 
 #hero h1 span {
@@ -528,7 +528,7 @@ h6 {
 }
 
 #hero .btn-get-started {
-    font-family: "Roboto", sans-serif;
+    font-family: "Raleway", sans-serif;
     text-transform: uppercase;
     font-weight: 500;
     font-size: 14px;
@@ -854,7 +854,7 @@ section {
     text-transform: uppercase;
     display: block;
     font-weight: 600;
-    font-family: "Poppins", sans-serif;
+    font-family: "Raleway", sans-serif;
     color: #222222;
 }
 
@@ -914,7 +914,7 @@ section {
 .counts .count-box p {
     padding: 0;
     margin: 0;
-    font-family: "Roboto", sans-serif;
+    font-family: "Raleway", sans-serif;
     font-size: 14px;
 }
 
@@ -1435,7 +1435,7 @@ section {
     font-size: 36px;
     color: #106eea;
     font-weight: 600;
-    font-family: "Poppins", sans-serif;
+    font-family: "Raleway", sans-serif;
     margin-bottom: 20px;
 }
 
@@ -1491,7 +1491,7 @@ section {
     transition: none;
     font-size: 14px;
     font-weight: 400;
-    font-family: "Roboto", sans-serif;
+    font-family: "Raleway", sans-serif;
     font-weight: 600;
     transition: 0.3s;
 }
@@ -1807,7 +1807,7 @@ section {
     font-size: 14px;
     line-height: 24px;
     margin-bottom: 0;
-    font-family: "Roboto", sans-serif;
+    font-family: "Raleway", sans-serif;
     color: #777777;
 }
 
